Reichstag gui reworked

--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -66,15 +66,52 @@
 
  #SCRIPTED GUIS
  GER_semicircle_parliament_gui_title:0 "The Reichstag"
- GER_leftist_factions_text:0 "§tLeftists§! factions (total seats §Y[?GER_left_faction|Y0]§!):"
- GER_leftist_factions_list_text:0 "£GER_parliament_party_icon|1 $GER_party_SB_text$ - [?SB] Seats\n£GER_parliament_party_icon|2 $GER_party_USPD_text$ - [?USPD]\n£GER_parliament_party_icon|3 $GER_party_SPD_text$ - [?SPD]\n£GER_parliament_party_icon|4 $GER_party_FVP_text$ - [?FVP]"
- GER_centrists_factions_text:0 "§gCentrist§! factions (total seats §Y[?GER_center_faction|Y0]§!):"
- GER_centrists_factions_list_text:0 "£GER_parliament_party_icon|5 $GER_party_NLP_text$ - [?NLP] Seats\n£GER_parliament_party_icon|9 $GER_party_Z_text$ - [?Z] Seats"
- GER_rightists_factions_text:0 "§3Rightist§! factions (total seats §Y[?GER_right_faction|Y0]§!):"
- GER_rightists_factions_list_text:0 "£GER_parliament_party_icon|10 $GER_party_DRP_text$ - [?DRP] Seats\n£GER_parliament_party_icon|11 $GER_party_DKP_text$ - [?DKP] Seats\n£GER_parliament_party_icon|12 $GER_party_WV_text$ - [?WV] Seats\n£GER_parliament_party_icon|13 $GER_party_DR_text$ - [?DR] Seats\n"
- GER_neutral_factions_text:0 "§LNeutral§! factions (total seats §Y[?GER_neutral_faction|Y0] seats§!):"
- GER_neutral_factions_list_text:0 "£GER_parliament_party_icon|6 $GER_party_RP_text$ - [?RP] Seats\n£GER_parliament_party_icon|7 $GER_party_NM_text$ - [?NM] Seats\n£GER_parliament_party_icon|8 $GER_party_NA_text$ - [?NA] Seats\n"
- GER_total_count_desc:0 "397"
+ GER_leftist_factions_text:0 "§tLeftist§! factions (total seats §Y[?GER_left_faction|Y0]§!):"
+ GER_leftist_factions_tt:0 "§tLeftists§! control §Y[?GER_left_faction|Y0] seats§!."
+ GER_leftist_factions_desc:0 "§L§tLeftist§! MPS will vote for §tLeftist§! laws.§!"
+ GER_leftist_factions_list_text:0 "[GetFactionsListSBName][GetFactionsListUSPDName][GetFactionsListSPDName][GetFactionsListFVPName]"
+ GER_leftist_factions_list_text_long:0 "[GetFactionsListSBNameLong][GetFactionsListUSPDNameLong][GetFactionsListSPDNameLong][GetFactionsListFVPNameLong]"
+ GER_leftist_factions_list_desc:0 "[GetFactionsListSBDesc][GetFactionsListUSPDDesc][GetFactionsListSPDDesc][GetFactionsListFVPDesc]"
+ GER_centrist_factions_text:0 "§gCentrist§! factions (total seats §Y[?GER_center_faction|Y0]§!):"
+ GER_centrist_factions_tt:0 "§gCentrists§! control §Y[?GER_center_faction|Y0] seats§!."
+ GER_centrist_factions_desc:0 "§L§gCentrist§! MPs will vote for §gCentrist§! laws.§!"
+ GER_centrist_factions_list_text:0 "[GetFactionsListNLPName][GetFactionsListZName]"
+ GER_centrist_factions_list_text_long:0 "[GetFactionsListNLPNameLong][GetFactionsListZNameLong]"
+ GER_centrist_factions_list_desc:0 "[GetFactionsListNLPDesc][GetFactionsListZDesc]"
+ GER_rightist_factions_text:0 "§3Rightist§! factions (total seats §Y[?GER_right_faction|Y0]§!):"
+ GER_rightist_factions_tt:0 "§3Rightists§! control §Y[?GER_right_faction|Y0] seats§!."
+ GER_rightist_factions_desc:0 "§L§3Rightist§! MPs will vote for §3Rightist§! laws.§!"
+ GER_rightist_factions_list_text:0 "[GetFactionsListFKPName][GetFactionsListDKPName][GetFactionsListWVName][GetFactionsListDRPName]"
+ GER_rightist_factions_list_text_long:0 "[GetFactionsListFKPNameLong][GetFactionsListDKPNameLong][GetFactionsListWVNameLong][GetFactionsListDRPNameLong]"
+ GER_rightist_factions_list_desc:0 "[GetFactionsListFKPDesc][GetFactionsListDKPDesc][GetFactionsListWVDesc][GetFactionsListDRPDesc]"
+ GER_neutral_factions_text:0 "§vNeutral§! factions (total seats §Y[?GER_neutral_faction|Y0]§!):"
+ GER_neutral_factions_tt:0 "§vNeutrals§! control §Y[?GER_neutral_faction|Y0] seats§!."
+ GER_neutral_factions_desc:0 "§L§vNeutral§! MPs will vote for §vNeutral§! laws.§!"
+ GER_neutral_factions_list_text:0 "[GetFactionsListRPName][GetFactionsListNMName][GetFactionsListNAName]"
+ GER_neutral_factions_list_desc:0 "[GetFactionsListRPDesc][GetFactionsListNMDesc][GetFactionsListNADesc]"
+ GER_factions_list_SB_text:0 "£GER_parliament_party_icon|1 $GER_party_SB_text$ - [?SB] Seats\n"
+ GER_factions_list_USPD_text:0 "£GER_parliament_party_icon|2 $GER_party_USPD_text$ - [?USPD] Seats\n"
+ GER_factions_list_USPD_text_long:0 "£GER_parliament_party_icon|2 $GER_party_USPD_text_long$ - [?USPD] Seats\n"
+ GER_factions_list_SPD_text:0 "£GER_parliament_party_icon|3 $GER_party_SPD_text$ - [?SPD] Seats\n"
+ GER_factions_list_SPD_text_long:0 "£GER_parliament_party_icon|3 $GER_party_SPD_text_long$ - [?SPD] Seats\n"
+ GER_factions_list_FVP_text:0 "£GER_parliament_party_icon|4 $GER_party_FVP_text$ - [?FVP] Seats\n"
+ GER_factions_list_FVP_text_long:0 "£GER_parliament_party_icon|4 $GER_party_FVP_text_long$ - [?FVP] Seats\n"
+ GER_factions_list_NLP_text:0 "£GER_parliament_party_icon|5 $GER_party_NLP_text$ - [?NLP] Seats\n"
+ GER_factions_list_NLP_text_long:0 "£GER_parliament_party_icon|5 $GER_party_NLP_text_long$ - [?NLP] Seats\n"
+ GER_factions_list_RP_text:0 "£GER_parliament_party_icon|6 $GER_party_RP_text$ - [?RP] Seats\n"
+ GER_factions_list_NM_text:0 "£GER_parliament_party_icon|7 $GER_party_NM_text$ - [?NM] Seats\n"
+ GER_factions_list_NA_text:0 "£GER_parliament_party_icon|8 $GER_party_NA_text$ - [?NA] Seats\n"
+ GER_factions_list_Z_text:0 "£GER_parliament_party_icon|9 $GER_party_Z_text$ - [?Z] Seats\n"
+ GER_factions_list_Z_text_long:0 "£GER_parliament_party_icon|9 $GER_party_Z_text_long$ - [?Z] Seats\n"
+ GER_factions_list_FKP_text:0 "£GER_parliament_party_icon|10 $GER_party_FKP_text$ - [?FKP] Seats\n"
+ GER_factions_list_FKP_text_long:0 "£GER_parliament_party_icon|10 $GER_party_FKP_text_long$ - [?FKP] Seats\n"
+ GER_factions_list_DKP_text:0 "£GER_parliament_party_icon|11 $GER_party_DKP_text$ - [?DKP] Seats\n"
+ GER_factions_list_DKP_text_long:0 "£GER_parliament_party_icon|11 $GER_party_DKP_text_long$ - [?DKP] Seats\n"
+ GER_factions_list_WV_text:0 "£GER_parliament_party_icon|12 $GER_party_WV_text$ - [?WV] Seats\n"
+ GER_factions_list_WV_text_long:0 "£GER_parliament_party_icon|12 $GER_party_WV_text_long$ - [?WV] Seats\n"
+ GER_factions_list_DRP_text:0 "£GER_parliament_party_icon|13 $GER_party_DRP_text$ - [?DRP] Seats\n"
+ GER_factions_list_DRP_text_long:0 "£GER_parliament_party_icon|13 $GER_party_DRP_text_long$ - [?DRP] Seats\n"
+
  GER_total_count_tt:0 "§gReichstag seats§!"
 
  GER_parliament_main_icon_tt:0 "[GERGetParliamentSeatName] - [GERGetParliamentPartyName]"
@@ -92,32 +129,41 @@
 
  #PARTIES
  GER_party_SB_text:0 "§QSpartakusbund§!"
- GER_party_SB_text_desc:0 "§L§QSpartakusbund/Spartacus League§!\n§!"
+ GER_party_SB_text_desc:0 "£GER_parliament_party_icon|1 §L§QSpartakusbund/Spartacus League§!\n§!\n\n"
  GER_party_USPD_text:0 "§RUSPD§!"
- GER_party_USPD_text_desc:0 "§L§RUnabhängige Sozialdemokratische Partei Deutschlands/Independent Social Democratic Party of Germany§!\n§!"
+ GER_party_USPD_text_long:0 "§RUnabhängige Sozialdemokratische Partei Deutschlands§!"
+ GER_party_USPD_text_desc:0 "£GER_parliament_party_icon|2 §L§RUnabhängige Sozialdemokratische Partei Deutschlands/Independent Social Democratic Party of Germany§!\n§!\n\n"
  GER_party_SPD_text:0 "§tSPD§!"
- GER_party_SPD_text_desc:0 "§L§tSozialdemokratische Partei Deutschlands/Social Democratic Party of Germany§!\nEstablished in 1863. It was one of the earliest §RMarxist-influenced§! parties in the world. The SPD is Europe's largest §RMarxist§! party, and the most popular political party in Germany.§!"
+ GER_party_SPD_text_long:0 "§tSozialdemokratische Partei Deutschlands§!"
+ GER_party_SPD_text_desc:0 "£GER_parliament_party_icon|3 §L§tSozialdemokratische Partei Deutschlands/Social Democratic Party of Germany§!\nFounded in 1863. It was one of the earliest §RMarxist-influenced§! parties in the world. The SPD is Europe's largest §RMarxist§! party, and the most popular political party in Germany.§!\n\n"
  GER_party_FVP_text:0 "§8FVp§!"
- GER_party_FVP_text_desc:0 "§L§8Fortschrittliche Volkspartei/Progressive People's Party§!\n§!"
+ GER_party_FVP_text_long:0 "§8Fortschrittliche Volkspartei§!"
+ GER_party_FVP_text_desc:0 "£GER_parliament_party_icon|4 §L§8Fortschrittliche Volkspartei/Progressive People's Party§!\n§!\n\n"
  GER_party_NLP_text:0 "§pNLP§!"
- GER_party_NLP_text_desc:0 "§L§pNationalliberale Partei/National Liberal Party§!\n§!"
+ GER_party_NLP_text_long:0 "§pNationalliberale Partei§!"
+ GER_party_NLP_text_desc:0 "£GER_parliament_party_icon|5 §L§pNationalliberale Partei/National Liberal Party§!\nFounded in 1867. It mainly represents the interests of the §Ynational§! and/or §Yliberal§!-minded §qProtestant§! educated and property-owning §gmiddle class§! as well as the industrial §gupper middle class§!.§!\n\n"
  GER_party_RP_text:0 "§7Regionalparteien§!"
- GER_party_RP_text_desc:0 "§L§7Regionalparteien/Regional Parties§!\n§!"
- GER_party_NM_text:0 "§vMinderheiten§!"
- GER_party_NM_text_desc:0 "§L§vNationale Minderheiten/National minorities§!\n§!"
- GER_party_NA_text:0 "§gFraktionslose§!"
- GER_party_NA_text_desc:0 "§L§gFraktionslose/Non-affiliated§!\n§!"
- GER_party_8_text:0 "§nBdL/BB/DBB§!"
- GER_party_8_text_desc:0 "§L§nBund der Landwirte/Agrarian League\nBayerischer Bauernbund/Bavarian Peasants' League\nDeutscher Bauernbund/German Farmers’ Association§!\n§!"
- GER_party_9_text:0 "§7DHP§!"
- GER_party_9_text_desc:0 "§L§7Deutsch-Hannoversche Partei/German-Hanoverian Party§!\n§!"
+ GER_party_RP_text_desc:0 "£GER_parliament_party_icon|6 §L§7Regionalparteien/Regional Parties§!\n§!\n\n"
+ GER_party_NM_text:0 "§LMinderheiten§!"
+ GER_party_NM_text_desc:0 "£GER_parliament_party_icon|7 §L§LNationale Minderheiten/National minorities§!\n§!\n\n"
+ GER_party_NA_text:0 "§vFraktionslose§!"
+ GER_party_NA_text_desc:0 "£GER_parliament_party_icon|8 §L§vFraktionslose/Non-affiliated§!\n§!"
+ #GER_party_8_text:0 "§nBdL/BB/DBB§!"
+ #GER_party_8_text_desc:0 "§L§nBund der Landwirte/Agrarian League\nBayerischer Bauernbund/Bavarian Peasants' League\nDeutscher Bauernbund/German Farmers’ Association§!\n§!\n\n"
+ #GER_party_9_text:0 "§7DHP§!"
+ #GER_party_9_text_desc:0 "§L§7Deutsch-Hannoversche Partei/German-Hanoverian Party§!\n§!\n\n"
  GER_party_Z_text:0 "§qZ§!"
- GER_party_Z_text_desc:0 "§L§qDeutsche Zentrumspartei/German Centre Party§!\nFormed in 1870, it successfully battled the §YKulturkamp§! waged by §gChancellor Otto von Bismarck§! against the §qCatholic Church§!.§!"
- GER_party_DRP_text:0 "§3DRP§!"
- GER_party_DRP_text_desc:0 "§L§3Deutsche Reichspartei/German Reich Party§!\n§!"
+ GER_party_Z_text_long:0 "§qDeutsche Zentrumspartei§!"
+ GER_party_Z_text_desc:0 "£GER_parliament_party_icon|9 §L§qDeutsche Zentrumspartei/German Centre Party§!\nFormed in 1870, it successfully battled the §YKulturkamp§! waged by §gChancellor Otto von Bismarck§! against the §qCatholic Church§!.§!\n\n"
+ GER_party_FKP_text:0 "§3FkP§!"
+ GER_party_FKP_text_long:0 "§3Freikonservative Partei§!"
+ GER_party_FKP_text_desc:0 "£GER_parliament_party_icon|10 §L§3Freikonservative Partei/Free Conservative Party§!\nFounded in 1867. Beside the §pNational Liberals§! it was closest in views of §gChancellor Otto von Bismarck§!, including his §RAnti-Socialist§! Laws and §YKulturkampf§! policies. The party is generally dominated by §gconservative industrialists§! and while it opposed political liberalism it also tended to support §Yfree trade§! and the development of §Yindustry§!.§!\n\n"
  GER_party_DKP_text:0 "§cDkP§!"
- GER_party_DKP_text_desc:0 "§L§cDeutschkonservative Partei/German Conservative Party§!\n§!"
- GER_party_WV_text:0 "§dWirtschaftliche Vereinigung§!"
- GER_party_WV_text_desc:0 "§d§NWirtschaftliche Vereinigung/Economic Union§!\n§!"
- GER_party_DR_text:0 "§NDeutsche Reformpartei§!"
- GER_party_DR_text_desc:0 "§L§NWirtschaftliche Vereinigung/German Reform Party§!\n§!"
+ GER_party_DKP_text_long:0 "§cDeutschkonservative Partei§!"
+ GER_party_DKP_text_desc:0 "£GER_parliament_party_icon|11 §L§cDeutschkonservative Partei/German Conservative Party§!\nFounded in 1876. It represents the interests of the German §gnobility§! and the §gJunker§! landowners. Though predominantly §qProtestant§!, the DkP opposed the §YKulturkampf§!, but supported §gBismarck§! when he began to implement §Yprotectionist§! policies.§!\n\n"
+ GER_party_WV_text:0 "§dWV§!"
+ GER_party_WV_text_long:0 "§dWirtschaftliche Vereinigung§!"
+ GER_party_WV_text_desc:0 "£GER_parliament_party_icon|12 §L§dWirtschaftliche Vereinigung/Economic Union§!\nFounded  in 1903 as a parliamentary group of §NAnti-semetic parties§! as well as members of the §nAgrarian parties§!. It campaigns for §Yspecial tariffs§! on English goods. They intend to §Yprotect§! the competitiveness of German companies, which is threatened by a wave of §Rbankruptcies§!.§!\n\n"
+ GER_party_DRP_text:0 "§NDRP§!"
+ GER_party_DRP_text_long:0 "§NDeutsche Reformpartei§!"
+ GER_party_DRP_text_desc:0 "£GER_parliament_party_icon|13 §L§NDeutsche Reformpartei/German Reform Party§!\nRefounded in 1900. In contrast to the more §dconservative§! German social anti-Semites, the §N"reformers"§! pursues an §Ranti-conservative§! course and, under the slogan §R"against Junkers and Jews"§!, advocates §Ysocial reforms§! for the benefit of the §glower classes§!.§!\n\n"
