Base Duma view tweak

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -481,7 +481,7 @@
  party_3_text_rus: "§gCenter Right§!"
  party_3_text_desc_rus: "§LThe Center Right owns [?RUS_parliament_seat_array^RUS_parliament_member_index] Seats§! ([?center_right_loyalty_litteral_seats|0] seats loyal)"
  party_4_text_rus: "§qReactionaries§!"
- party_4_text_desc_rus: "§LThe Far Right owns [?RUS_parliament_seat_array^RUS_parliament_member_index] Seats§! ([?far_right_loyalty_litteral_seats|0] seats loyal)"
+ party_4_text_desc_rus: "£RUS_parliament_party_icon|4 §qReactionaries§! §Lowns [?RUS_parliament_seat_array^RUS_parliament_member_index] Seats§! ([?far_right_loyalty_litteral_seats|0] seats loyal)"
 
  RUS_parliament_gui_title: "Grid Parliament"
  RUS_semicircle_parliament_gui_title: "Le parlement"
@@ -489,17 +489,17 @@
  RUS_parliament_party_description: "[GetParliamentPartyNameForRUS]\n[GetParliamentPartyDescriptionForRus]"
  RUS_parliament_seat_text: "Seat [?temp_seat|Y0]"
  #RUS_parliament_member_text: "[GetParliamentPartyNameForRUS] - [?RUS_parliament_seat_array^RUS_parliament_member_index] Seats"
- RUS_parliament_member_text: "[GetParliamentPartyNameForRUS] - [GetLoyaltyNameForRus] ([GetLoyaltyForRus])"
+ RUS_parliament_member_text: "[GetParliamentPartyNameForRUS] - [?RUS_parliament_seat_array^RUS_parliament_member_index] Seats ([GetLoyaltyForRus] Loyal)"
 
  far_right_loyalty_tt: "[?far_right_loyalty|%%]"
  center_right_loyalty_tt: "[?center_right_loyalty|%%]"
  center_left_loyalty_tt: "[?center_left_loyalty|%%]"
  socialists_loyalty_tt: "[?socialists_loyalty|%%]"
 
- supportive: "§GLoyal§!"
- constructive: "§7Constructive§!"
- opposition: "§OOpposition§!"
- obstruction: "§RObstructive§!"
+ supportive: "§G[GetSeatsForRus]§!"
+ constructive: "§7[GetSeatsForRus]§!"
+ opposition: "§O[GetSeatsForRus]§!"
+ obstruction: "§R[GetSeatsForRus]§!"
 
  RUS_far_right_law_tt: "\nThis is a £RUS_parliament_party_icon|4 $party_4_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
  RUS_center_right_law_tt: "\nThis is a £RUS_parliament_party_icon|3 $party_3_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
