predicted seats gui reworked

--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -86,7 +86,7 @@
  GER_rightist_factions_list_desc:0 "[GetFactionsListFKPDesc][GetFactionsListDKPDesc][GetFactionsListWVDesc][GetFactionsListDRPDesc]"
  GER_neutral_factions_text:0 "§vNeutral§! factions (total seats §Y[?GER_neutral_faction|Y0]§!):"
  GER_neutral_factions_tt:0 "§vNeutrals§! control §Y[?GER_neutral_faction|Y0] seats§!."
- GER_neutral_factions_desc:0 "§L§vNeutral§! MPs will vote for §vNeutral§! laws.§!"
+ GER_neutral_factions_desc:0 "§L§vNeutral§! MPs will vote for §vany§! laws.§!"
  GER_neutral_factions_list_text:0 "[GetFactionsListRPName][GetFactionsListNMName][GetFactionsListNAName]"
  GER_neutral_factions_list_desc:0 "[GetFactionsListRPDesc][GetFactionsListNMDesc][GetFactionsListNADesc]"
  GER_factions_list_SB_text:0 "£GER_parliament_party_icon|1 $GER_party_SB_text$ - [?SB] Seats\n"
@@ -126,6 +126,48 @@
  GER_parliament_modify_button_tt:0 "§GCtrl+Click§! to add §Y5§! Seats from [GERGetParliamentPartyName]\n§GShift+Click§! to subtract §Y5§! Seats from [GERGetParliamentPartyName]"
 
  GER_the_parliament_seats_will_change:0 "§YParliament seats will change.§!"
+
+ GER_leftist_factions_prediction_text:0 "§tLeftist§! factions (total seats §Y[?GER_left_faction_prediction|Y0]§!):"
+ GER_leftist_factions_prediction_tt:0 "§tLeftists§! will gain §Y[?GER_left_faction_prediction|Y0] seats§!."
+ GER_leftist_factions_prediction_list_text:0 "[GetFactionsPredictionListSBName][GetFactionsPredictionListUSPDName][GetFactionsPredictionListSPDName][GetFactionsPredictionListFVPName]"
+ GER_leftist_factions_prediction_list_text_long:0 "[GetFactionsPredictionListSBNameLong][GetFactionsPredictionListUSPDNameLong][GetFactionsPredictionListSPDNameLong][GetFactionsPredictionListFVPNameLong]"
+ GER_leftist_factions_prediction_list_desc:0 "[GetFactionsPredictionListSBDesc][GetFactionsPredictionListUSPDDesc][GetFactionsPredictionListSPDDesc][GetFactionsPredictionListFVPDesc]"
+ GER_centrist_factions_prediction_text:0 "§gCentrist§! factions (total seats §Y[?GER_center_faction_prediction|Y0]§!):"
+ GER_centrist_factions_prediction_tt:0 "§gCentrists§! will gain §Y[?GER_center_faction_prediction|Y0] seats§!."
+ GER_centrist_factions_prediction_list_text:0 "[GetFactionsPredictionListNLPName][GetFactionsPredictionListZName]"
+ GER_centrist_factions_prediction_list_text_long:0 "[GetFactionsPredictionListNLPNameLong][GetFactionsPredictionListZNameLong]"
+ GER_centrist_factions_prediction_list_desc:0 "[GetFactionsPredictionListNLPDesc][GetFactionsPredictionListZDesc]"
+ GER_rightist_factions_prediction_text:0 "§3Rightist§! factions (total seats §Y[?GER_right_faction_prediction|Y0]§!):"
+ GER_rightist_factions_prediction_tt:0 "§3Rightists§! will gain §Y[?GER_right_faction_prediction|Y0] seats§!."
+ GER_rightist_factions_prediction_list_text:0 "[GetFactionsPredictionListFKPName][GetFactionsPredictionListDKPName][GetFactionsPredictionListWVName][GetFactionsPredictionListDRPName]"
+ GER_rightist_factions_prediction_list_text_long:0 "[GetFactionsPredictionListFKPNameLong][GetFactionsPredictionListDKPNameLong][GetFactionsPredictionListWVNameLong][GetFactionsPredictionListDRPNameLong]"
+ GER_rightist_factions_prediction_list_desc:0 "[GetFactionsPredictionListFKPDesc][GetFactionsPredictionListDKPDesc][GetFactionsPredictionListWVDesc][GetFactionsPredictionListDRPDesc]"
+ GER_neutral_factions_prediction_text:0 "§vNeutral§! factions (total seats §Y[?GER_neutral_faction_prediction|Y0]§!):"
+ GER_neutral_factions_prediction_tt:0 "§vNeutrals§! will gain §Y[?GER_neutral_faction_prediction|Y0] seats§!."
+ GER_neutral_factions_prediction_list_text:0 "[GetFactionsPredictionListRPName][GetFactionsPredictionListNMName][GetFactionsPredictionListNAName]"
+ GER_neutral_factions_prediction_list_desc:0 "[GetFactionsPredictionListRPDesc][GetFactionsPredictionListNMDesc][GetFactionsPredictionListNADesc]"
+ GER_factions_prediction_list_SB_text:0 "£GER_parliament_party_icon|1 $GER_party_SB_text$ - [?SB_upcoming] Seats\n"
+ GER_factions_prediction_list_USPD_text:0 "£GER_parliament_party_icon|2 $GER_party_USPD_text$ - [?USPD_upcoming] Seats\n"
+ GER_factions_prediction_list_USPD_text_long:0 "£GER_parliament_party_icon|2 $GER_party_USPD_text_long$ - [?USPD_upcoming] Seats\n"
+ GER_factions_prediction_list_SPD_text:0 "£GER_parliament_party_icon|3 $GER_party_SPD_text$ - [?SPD_upcoming] Seats\n"
+ GER_factions_prediction_list_SPD_text_long:0 "£GER_parliament_party_icon|3 $GER_party_SPD_text_long$ - [?SPD_upcoming] Seats\n"
+ GER_factions_prediction_list_FVP_text:0 "£GER_parliament_party_icon|4 $GER_party_FVP_text$ - [?FVP_upcoming] Seats\n"
+ GER_factions_prediction_list_FVP_text_long:0 "£GER_parliament_party_icon|4 $GER_party_FVP_text_long$ - [?FVP_upcoming] Seats\n"
+ GER_factions_prediction_list_NLP_text:0 "£GER_parliament_party_icon|5 $GER_party_NLP_text$ - [?NLP_upcoming] Seats\n"
+ GER_factions_prediction_list_NLP_text_long:0 "£GER_parliament_party_icon|5 $GER_party_NLP_text_long$ - [?NLP_upcoming] Seats\n"
+ GER_factions_prediction_list_RP_text:0 "£GER_parliament_party_icon|6 $GER_party_RP_text$ - [?RP_upcoming] Seats\n"
+ GER_factions_prediction_list_NM_text:0 "£GER_parliament_party_icon|7 $GER_party_NM_text$ - [?NM_upcoming] Seats\n"
+ GER_factions_prediction_list_NA_text:0 "£GER_parliament_party_icon|8 $GER_party_NA_text$ - [?NA_upcoming] Seats\n"
+ GER_factions_prediction_list_Z_text:0 "£GER_parliament_party_icon|9 $GER_party_Z_text$ - [?Z_upcoming] Seats\n"
+ GER_factions_prediction_list_Z_text_long:0 "£GER_parliament_party_icon|9 $GER_party_Z_text_long$ - [?Z_upcoming] Seats\n"
+ GER_factions_prediction_list_FKP_text:0 "£GER_parliament_party_icon|10 $GER_party_FKP_text$ - [?FKP_upcoming] Seats\n"
+ GER_factions_prediction_list_FKP_text_long:0 "£GER_parliament_party_icon|10 $GER_party_FKP_text_long$ - [?FKP_upcoming] Seats\n"
+ GER_factions_prediction_list_DKP_text:0 "£GER_parliament_party_icon|11 $GER_party_DKP_text$ - [?DKP_upcoming] Seats\n"
+ GER_factions_prediction_list_DKP_text_long:0 "£GER_parliament_party_icon|11 $GER_party_DKP_text_long$ - [?DKP_upcoming] Seats\n"
+ GER_factions_prediction_list_WV_text:0 "£GER_parliament_party_icon|12 $GER_party_WV_text$ - [?WV_upcoming] Seats\n"
+ GER_factions_prediction_list_WV_text_long:0 "£GER_parliament_party_icon|12 $GER_party_WV_text_long$ - [?WV_upcoming] Seats\n"
+ GER_factions_prediction_list_DRP_text:0 "£GER_parliament_party_icon|13 $GER_party_DRP_text$ - [?DRP_upcoming] Seats\n"
+ GER_factions_prediction_list_DRP_text_long:0 "£GER_parliament_party_icon|13 $GER_party_DRP_text_long$ - [?DRP_upcoming] Seats\n"
 
  #PARTIES
  GER_party_SB_text:0 "§QSpartakusbund§!"
