--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -25,7 +25,7 @@
  republicain_federation_allied:0 "§2Republican Right§! Allied"
  nationalists_allied:0 "§LNationalists§! Allied"
 
-  party_1_text:0 "§RSFIO§!"
+  party_1_text:0 "§RSFIO§!" #£parliament_party_icon|1
   
   party_1_text_desc:0 "§LFounded in 1905 by popular figures like §YJean Jaurès§!, §YJules Guesde§! and §YLéon Blum§!, the French section of the Workers' Internation is a revolutionary socialist party. Often focused on symbolic actions, the supporters of the §RSFIO§! are made up of §RSoreliens§!, §RGuesdiens§! and other "types" of radical left-wing activists.\n\nThe §RSFIO§! is certainly the least stable group in the parliament, the socialism idea they represent being a "mille-feuille" of different ideologies of the workers' struggle, from anarchism to syndicalism.§!"
 
