now using funny dots

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -889,8 +889,8 @@ FRA_too_much_reform_can_break_the_coalition:0 "§RPushing the reforms too far co
 
 FRA_far_right_leave_coalition:0 "§LNationalists§! will leave our §YConservative Alliance§!, making us lose [?nationalist|Y0]§R seats.§!"
 FRA_SFIO_leave_coalition:0 "§RSFIO§! will leave our §YConservative Alliance§!, making us lose [?SFIO|Y0]§R seats.§!"
-FRA_independents_radicals_leave_coalition:0 "§1Independent Radicals§! will leave our §YConservative Alliance§!, making us lose [?independent_radicals|Y0]§R seats.§!"
-FRA_some_independents_radicals_join_us:0 "§GSome §1Independent Radicals§! will leave their party and join us.§!"
+FRA_independents_radicals_leave_coalition:0 "£parliament_party_icon|[?v] [GetParliamentPartyName] will leave our §YConservative Alliance§!, making us lose [?independent_radicals|Y0]§R seats.§!"
+FRA_some_independents_radicals_join_us:0 "§GSome £parliament_party_icon|[?v] [GetParliamentPartyName] will leave their party and join us.§!"
 
 
 FRA_law_against_far_right_leagues:0 "Law Against Far-Right Leagues"
@@ -971,7 +971,7 @@ FRA_allow_to_chose_a_popular_figure:0 "§GIn theses difficult times, we will be 
 
 FRA_could_be_a_popular_figurehead:0 "§LWe could use him as a §YPopular Figurehead§! in favor of our governement...§!"
 
-FRA_rename_AF_to_comites_napoleoniens_imperialistes:0 "Unite most of the §gRestorationists§! deputies under a new party called §g\"Comités Napoléoniens Impérialistes\"§!."
+FRA_rename_AF_to_comites_napoleoniens_imperialistes:0 "Unite most of the §gRestorationists§! deputies under a new party called £parliament_party_icon|9 §g\"Comités Napoléoniens Impérialistes\"§!."
 FRA_bonaparte_legislative_elections_done:0 "Special Legislative Elections are done"
 
 FRA_50_republican_go_to_radical:0 "§Y50§! §2Republican§! §YDeputies§! will join the §CRadical Party§!, §Rmaking us lose 50 seats !§!"
