--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -83,6 +83,7 @@
   party_10_text_french:0 "§LParti Nationaliste (PN)§!"
   party_10_text_desc:0 "§LA merge of the §gLeague of the French Homeland§! and the §gLeague of Patriots§!, this informal coalition is profoundly §ganti-Dreyfusard§! and anti-left cartel. Sovereignists and populists, the party supports monarchists and revanchism against Germany.\n\nLed by §YGodefroy de Cavaignac§!, the party definitively anchored itself as a complement to the nationalist policies of the §gProudhon circle§!.§!"
   party_11_text:0 "§WVacant§!"
+  party_11_text_french:0 ""
   party_11_text_desc:0 "§LFrom one year to the another, the number of seats in parliament can change, which sometimes causes empty seats to appear.§!"
 
 
