fixes and stuff

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1227,6 +1227,7 @@
  FRA_jacques_bainville:0 "Jacques Bainville"
  FRA_alexandre_ribot:0 "Alexandre Ribot"
  FRA_jacques_piou:0 "Jacques Piou"
+ FRA_francois_coty:0 "François Coty"
  FRA_leon_daudet:0 "Léon Daudet"
  FRA_antoine_schwerer:0 "Antoine Schwerer"
  FRA_maurice_barres:0 "Maurice Barrès"
