--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -333,6 +333,7 @@
  christian_nationalist:0 "Christian Nationalist"
  moderate_socialist:0 "Moderate Socialist"
  consensual_figure:0 "Consensual Figure"
+ corporatist:0 "Devoted Corporatist"
  christian_republicain:0 "Christian Republicain"
  politized_admiral:0 "Politized Admiral"
  antisemitic_nationalist:0 "Antisemitic Nationalist"
