--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14616,7 +14616,7 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
 
  ww1_france.439.t:0 "A new Era for France"
  ww1_france.439.d:0 "The emperor must choose which politician will be his prime minister. The Prime Minister will then compose his government freely with Louis' blessing. Several likely candidates are in the running, some more original than others, but all valid and nationalist."
- ww1_france.439.a:0 "Jacques Piou is a consensual figure"
+ ww1_france.439.a:0 "François Coty, president of Comité central bonapartiste"
  ww1_france.439.b:0 "Daudet saved France in the great war"
  ww1_france.439.c:0 "Pujo is a die hard restorationist"
  ww1_france.439.e:0 "Lets try Valois' national-syndicalist approach"
