--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6494,6 +6494,9 @@
  FRA_ww1_the_social_democrat_compromise:0 "The Social Democrat Compromise"
  FRA_ww1_the_social_democrat_compromise_desc:0 "French politics are too tense and our economy too weak to stand up against the central powers on a lasting basis. It is time to initiate a fundamental reform of the government and to transform our economy through the construction of railroads."
 
+ FRA_billion_francs_man:0 "The Billion Francs Man"
+ FRA_billion_francs_man_desc:0 "François Coty is a powerful multimillionaire with an exciting career. This major investor will make France one of the largest economies in Europe."
+
  FRA_there_is_another:0 "\"There is Another\""
  FRA_there_is_another_desc:0 "Finally, after the accumulation of an incredible number of events, George Valois, 15 years ago a figure completely unknown to the general public, was appointed Prime Minister. Thus the way is opened towards an unprecedented economic reformism: national syndicalism."
  FRA_valois_governement:0 "Nationalist Governement Formed"
