--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -597,6 +597,7 @@
  VICTORY_POINTS_11817:0 "Williamsport"
  VICTORY_POINTS_11782:0 "Trenton"
  VICTORY_POINTS_873:0 "Alexandria"
+ VICTORY_POINTS_129:0 "Cherepovets"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
