--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1010,6 +1010,7 @@
  STATE_1009:0 "Berar"
  STATE_1010:0 "Krainer Schneeberg"
  STATE_1011:0 "Veracruz Port"
+ STATE_1012:0 "Cherepovets"
 
  Dyushambe:0 "Dyushambe"
  YODONG_STATE:0 "Yodong"
