--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -682,26 +682,26 @@
  CHL_javier_angel_figueroa:0 "Javier Ángel Figueroa"
  CHL_jorge_boonen:0 "Jorge Boonen"
  CHL_luis_altamirano:0 "Luis Altamirano"
- CHL_garin:0 "Garin"
  CHL_juan_pablo_bennett:0 "Juan Pablo Bennett"
  CHL_jose_maria_bari:0 "José Maria Bari"
  CHL_guillermo_armstrong:0 "Guillermo Armstrong Ramirez"
  CHL_luis_felipe_brieba:0 "Luis Felipe Brieba"
- CHL_merro:0 "Tobias Merro"
- CHL_naschold_argomedo:0 "Otto Argomedo"
- CHL_tellez_cracamo:0 "Tellez Cracamo"
- CHL_ekdahl_anglin:0 "Guillermo Ekdahl Anglin"
- CHL_videla:0 "Federico Videla"
- CHL_ledesma:0 "Enrique Ledesma"
- CHL_sez_morales:0 "Carlos Sez Morales"
- CHL_gomaz_arcos:0 "Alberto Arcos"
- CHL_holley:0 "Adolfo Holley"
- CHL_korner:0 "Emil Körner"
+ CHL_indalicio_tellez_carcamo:0 "Indalicio Tellez Carcamo"
+ CHL_sofanor_parra_hermosilla:0 "Sofanor Parra Hermosilla"
+ CHL_roberto_silva_renard:0 "Roberto Silva Renard"
+ CHL_vicente_palacios:0 "Vicente Palacios"
+ CHL_elias_yanez:0 "Elias Yañez Ponce de Leon"
+ CHL_wilhelm_ekdahl_anglin:0 "Wilhelm Ekdahl Anglin"
+ CHL_jose_de_la_cruz_salvo:0 "Jose de la Cruz Salvo"
+ CHL_adolfo_holley:0 "Adolfo Holley"
+ CHL_emil_korner:0 "Emil Körner"
  CHL_aristides_pinto_concha:0 "Aristides Pinto Concha"
  CHL_jorge_montt:0 "Jorge Montt Alvarez"
  CHL_francisco_neff:0 "Fransisco Neff Jara"
- CHL_ward:0 "Carlos Ward"
- CHL_soublette:0 "Guillermo Soublette"
+ CHL_carlos_ward:0 "Carlos Ward Rodriguez"
+ CHL_luis_gomez_carreno:0 "Luis Gomez Carreño"
+ CHL_joaquin_munoz_hurtado:0 "Joaquin Muñoz Hurtado"
+ CHL_arturo_wilson_navarrete:0 "Arturo Wilson Navarrete"
  CHL_jose_rafael_balmaceda_fernandez:0 "José Rafael Balmaceda Fernández"
  CHL_domingo_amunategui_solar:0 "Domingo Amunategui Solar"
  CHL_agustin_edwards_mac_clure:0 "Agustín Edwards Mac-Clure"
@@ -726,6 +726,13 @@
  CHL_luis_barros_borgono:0 "Luis Barros Borgoño"
  CHL_luis_aldunate_echeverria:0 "Luis Aldunate Echeverría"
  CHL_jorge_matte_gormaz:0 "Jorge Matte Gormaz"
+ CHL_jose_luis_sanchez_besa:0 "Jose Luis Sanchez Besa"
+ CHL_enrique_zanartu_prieto:0 "Enrique Zañartu Prieto"
+ CHL_alberto_gonzalez_errazuriz:0 "Alberto Gonzalez Errazuriz"
+ CHL_enrique_mac-iver_rodriguez:0 "Enrique Mac-Iver Rodriguez"
+ CHL_joaquin_edwards_bello:0 "Joaquin Edwards Bello"
+ CHL_ricardo_matte_perez:0 "Ricardo Matte Perez"
+ CHL_alberto_edwards_vives:0 "Alberto Edwards Vives"
 
  # COLOMBIA
  COL_ramon_gonzalez_valencia:0 "Ramón González Valencia"
