--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -733,6 +733,7 @@
  CHL_joaquin_edwards_bello:0 "Joaquin Edwards Bello"
  CHL_ricardo_matte_perez:0 "Ricardo Matte Perez"
  CHL_alberto_edwards_vives:0 "Alberto Edwards Vives"
+ CHL_francisco_antonio_encina_armanet:0 "Francisco Antonio Encina Armanet"
 
  # COLOMBIA
  COL_ramon_gonzalez_valencia:0 "Ramón González Valencia"
