--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4452,6 +4452,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.124.t:0 "End of the Committee Struggle"
  ottoman.124.d:0 "Though we've gained our vast autonomous rule in the region through our connections in the central committee, our rule no longer depends on them. As we're no longer subjected to their rule, nor our power depends on their approval, we no longer need to have a balancing game between our influences. Only influence participated will the the one done by us."
  ottoman.124.a:0 "We are our own committee."
+ ottoman.125.t:0 "Albanian Vilayet"
+ ottoman.125.d:0 "Since 1430, Albanians lands have been positioned under the Ottoman rule. During this time, Albania went through Turkification and Islamization in order to create loyalty in the Balkans. Yet in the last few decades, Orthodox, Catholic and Muslim alike, Albanians across the empire has been revolting.\nAs last of our few revolts have been a success, the Ottoman government finally agreed to our demands to form an autonomous Albanian vilayet. By uniting four large Albanian populated vilayets; Kosovo Vilayet, Scutari Vilayet, Manastir Vilayet and Janina Vilayet; a united autonomous Albanian vilayet is being planned to be established. With this vilayet, Albanians under the Ottoman empire will have a large autonomous and right to self rule, inlucing education in Albanian language and further acceptance of the Albanian culture."
+ ottoman.125.a:0 "Matters of the empire has priority over Albania."
+ ottoman.125.b:0 "Our struggle finally bearing its fruits."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
