media control coty

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6501,6 +6501,9 @@
  FRA_there_is_another_desc:0 "Finally, after the accumulation of an incredible number of events, George Valois, 15 years ago a figure completely unknown to the general public, was appointed Prime Minister. Thus the way is opened towards an unprecedented economic reformism: national syndicalism."
  FRA_valois_governement:0 "Nationalist Governement Formed"
 
+ FRA_assert_total_media_control:0 "Assert Total Media Control"
+ FRA_assert_total_media_control_desc:0 "The new government has substantial secret funds intended to take control of a large part of the daily independent newspapers. The goal of [FRA.getLeader] is to use the media as propaganda to spread the government's nationalist ideology."
+
  FRA_autarky:0 "French Autarky"
  FRA_autarky_desc:0 "France must have the means to be autonomous in its supply of resources, but also in the management of its industry and its assets."
 
