--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1183,6 +1183,8 @@
  FRA_edouard_herriot:0 "Édouard Herriot"
  FRA_georges_valois:0 "Georges Valois"
  FRA_hubert_lagardelle:0 "Hubert Lagardelle"
+ FRA_eugene_mathon:0 "Eugène Mathon"
+ FRA_urbain_gohier:0 "Urbain Gohier"
  FRA_maurice_pujo:0 "Maurice Pujo"
  FRA_gouvernement_provisoire:0 "Gouvernement Provisoire"
  FRA_victoire:0 "Victoria-Louise de Prusse"
