--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -362,6 +362,8 @@
  primo_rettore:0 "Il Primo Rettore"
  futurist_revolutionary:0 "Futurist Revolutionary"
  nationalist_syndicalist:0 "National Syndicalist"
+ industrial_magnate:0 "Industrial Magnate"
+ propagandist_journalist:0 "Propagandist Journalist"
  the_loyal:0 "cel Loial"
  devoted_monarch:0 "Devoted Monarch"
  no_interest_in_politics:0 "No Interest in Politics"
