--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1367,6 +1367,7 @@ USA_ford_assembly_lines_desc:0 "Ford Motor has recently made a breakthrough with
 appointment:0 "After the §Y1912 election§!, the House of Representatives will increase from §Y391§! seats to §Y433§! seats"
 USA_stabilize_hati:0 "Stabilize Haiti"
 USA_stabilize_hati_desc:0 "The Haitian government has faced its what, 9th president murdered in the last few months? Haiti is in a complete state of anarchy, and if we don't do something the chaos could also harm our business. Let's organize our marines to occupy the country, for now atleast."
+USA_invade_dominica:0 "Invade Dominica"
 appointment2:0 "We will mantain a narrow majority in the house after the 1910 midterms, preventing possible consequences from a Democrat controlled congress"
 mexican_revolution.tt:0 "§YThis focus will be autocompleted when the§! §GMexican§! revolu§Rtion§! §Yhas begun§!"
 focus_will_be_auto_completed:0 "This focus will be §Yautocompleted§! through an event" 
@@ -4881,10 +4882,6 @@ USA_register_lobbyists:0 "Register Lobbyists"
  AUH_prepare_the_great_war_of_sky_desc:0 "With vast advancements in military technology, it is clear that the next Great War will take place not just on land and sea, but in the clouds. We must prepare ourselves to take part in this ultimate battle."
  AUH_finance_osterreichische_aviatik:0 "Finance Österreichische Aviatik"
  AUH_finance_osterreichische_aviatik_desc:0 "In order to build up our armada of the skies, we must turn to private arms companies to help. With the assistance of Österreichische Aviatik, we will create an air fleet never seen before."
-ww1_raj.7.t:0 "Mass Suicides"
-RAJ_construct_the_fan:0 "Construct the Fan"
-RAJ_construct_the_fan_desc:0 "Desperate times call for desperate measures. A German victory in The Gread war redux would be no goud for our population. We must do the unthinkable, and construct a fan to blow the deadly Indian scent to Germany"
-ww1_raj.8.t:0 "Indian Scent Detected in Germany"
  AUH_italian_bombers_inspiration:0 "Italian Bombers Inspiration"
  AUH_italian_bombers_inspiration_desc:0 "The Italians have constructed an incredibly efficient and devastating fleet of bombers that will wreak havoc on an enemy nation. Despite our differences, we must take inspiration from their design before we find ourselves on the receiving end of it…"
  AUH_expand_the_UFAG:0 "Expand the UFAG"
