--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2269,6 +2269,9 @@ USA_divided_republican_party:0 "Divided Republican Party"
  USA_electrification:0 "Electrification"
  USA_wild_west:0 "The Wild West"
  USA_us_economic_experts:0 "American Economic Experts"
+ USA_the_mexico_blitz:0 "The Mexico Blitz"
+ USA_mexican_quagmire_1:0 "Mexican Quagmire"
+ MEX_guerilla_warfare:0 "Guerilla Warfare"
  #PERSIA
  PER_idea_rural_society:0 "Rural Society"
  PER_idea_rural_society_desc:0 "Persia, dwarfed in comparison to the economies of the European and American nations, and cursed with political instability, is in a difficult position to modernise. The rapid decline has distracted the Persian nation from adapting its agrarian economy, and with it comes the cost of heavy economic reliance and a lack of infrastructure to industrialise from. And while the Persian army does not suffer from this as much as it logically should due to the military missions sent by the European powers, Persia is left completely vulnerable to invasion due to its lack of an industrial base, even from tribes inside of its borders. The revolutionary instability has already done grave harm to the integrity and glue of the nation, and this lack of centralisation is the cherry on top of Persia's problems."
