focus fo russia support mohammed ali shah

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2552,6 +2552,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  PER_mohammad_taqi_pessian:0 "Mohammad Taqi Pessian"
  PER_soleyman_eskandari:0 "Soleiman Eskandari"
  PER_mirza_kuchik_khan:0 "Mirza Kuchik Khan"
+ PER_mohammad_ali_shah:0 "Mohammed Ali Shah"
 
  # THE PHILIPPINES
  PHI_manuel_luis_quezon:0 "Manuel Luis Quezón"
