fix missing state name

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1011,6 +1011,7 @@
  STATE_1010:0 "Krainer Schneeberg"
  STATE_1011:0 "Veracruz Port"
  STATE_1012:0 "Cherepovets"
+ STATE_1013:0 "Asterabad"
 
  Dyushambe:0 "Dyushambe"
  YODONG_STATE:0 "Yodong"
