--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -988,7 +988,7 @@
  CHI_party_expansion:0 "Party Expansion"
  CHI_party_expansion_desc:0 "All over China, brilliant minds offer their support to the Republic. We need only accept them."
  CHI_three_principles:0 "Three Principles"
- CHI_three_principles_desc:0 "Nationalism, democracy, and the livlihood of the people. By staying true to these, the Republic shall endure all."
+ CHI_three_principles_desc:0 "Nationalism, democracy, and the livelihood of the people. By staying true to these, the Republic shall endure all."
  CHI_united_china:0 "United China"
  CHI_united_china_tt:0 "Unlocks §YUnite Warlords§! Decisions"
  CHI_united_china_desc:0 "China has collapsed. Petty warlords and their fiefdoms plague the lands. It's time to put them in their places."
