--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2172,15 +2172,21 @@ socialism_banned:0 "Socialism Banned"
  CHI_idea_sun_yatsen_president_2_desc:0 "Sun Yat-sen, a key architect of the Chinese Republican Revolution, is the Generalissimo of the Constitutional Protection Government in Guangzhou, Guangdong province. He returned to Guangzhou to lead the southern government in association with the Guangdong warlord Chen Zhongming. He dreams the Nationalist Revolution from there to Beijing."
  CHI_idea_united_front:0 "United Front"
  CHI_idea_united_front_desc:0 "The party has allowed members of the [CHI.GetCommunistParty] to join the Kuomintang on an individual basis. This influx allows us to have military support, but it also allows socialist influence on the political line of the Kuomintang."
+USA_pull_out_of_mexico:0 "Withdraw from Mexico"
  russian_advisors:0 "Russian Advisors"
  soviet_advisors:0 "Soviet Advisors"
  CHI_socialist_bureaucracy:0 "Socialist Bureaucracy"
  CHI_union_in_power:0 "United Unions of Chinese Workers"
- 
+ USA_war_apathy:0 "Increasing Pressure to End the Second Mexican American War"
+USA_drum_up_war_support:0 "Drum Up War Support"
+USA_the_mexican_blow:0 "The Mexican Blow"
+USA_the_knockout_punch:0 "The Knockout Punch"
+USA_second_mexican_american_war_desc:0 "Tensions between Mexico and the United States have once again boiled over into a full scale war, however much has changed since the last war. Mexico is as united as it can be against us this time around, seeing this attack as not just American expansion, but a very threat to their independence. They are expected to fight much harder and more brutually this time around, using guerilla warfare to try and force us to withdraw or suffer unsustainable casualties.\n\nWe must prove them wrong, with well planed small and local offensives, we can slowly but surely capture Mexicos key cities and force their surrender. While there's no question on if we can beat Mexico militarily, we must ensure the war is fast enough or is will become §Rpolitically unpalletable§!."
  #USA
+USA_second_mexican_american_war:0 "Second Mexican-American War"
 USA_economic_downturn:0 "Economic Downturn"
 USA_economic_downturn6:0 "A Return to Normalcy"
-USA_economic_downturn7:0 "Foreign Loans"
+USA_economic_downturn7:0 "Debt From Foreign Nations"
 USA_divided_republican_party:0 "Divided Republican Party"
  USA_idea_volunteer_corps:0 "Volunteer Corps"
  USA_idea_faith_act:0 "Faith Act"
