quality of life

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1461,11 +1461,15 @@ USA_mcguigan_anti_klan:0 "McGuigan Anti Klan Campaign"
 USA_klan_1:0 "Second Klan"
 USA_memories_of_1871:0 "Memories of 1871"
 USA_memories_of_1871_desc:0 "In 1871, Grant signed a law banning the first Klan. With this precedent, Roosevelt can technically argue the idea of a second Klan is illegal to begin with. While some conservatives will complain this is unfair, its the reality of the situation."
+USA_invade_dominica_desc:0 "The Dominican Government has very high loans which it can never hope to repay. To prevent a European power from invading the island to secure their debt money, we must beat them to it. We shall order the Marines to quickly occupy the Dominican Republic to secure its independence from Europe."
+ USA_neutrality_with_a_spine_desc:0 "While we are undoubtedly neutral, it doesn't mean we should let other nations just roll over us. We should increase rhetoric against those who attempt to violate our neutrality by trying to dictate who we can and can't trade with as well as blatanly send their spies into our country to sabatoge us."
 USA_a_few_bad_apples:0 "Fight Ignorance"
 USA_a_few_bad_apples_desc:0 "Many in the new Klan simply don't know any better due to a lack of education. By investing in southern schools, we can help ensure people know better then to believe the many lies the Klan spreads."
 USA_southern_investments:0 "Invest in the South"
 USA_southern_investments_desc:0 "One of the new Klans biggest groups of support comes from poor southerners, swayed by their populistic messages. By increasing investments in these areas, we can help reduce the appeal of the Klan."
 USA_the_root_cause:0 "Target the Heart and Soul"
+USA_support_the_war_preparedness_campaign:0 "Support the War Preparedness Campaign"
+USA_support_the_war_preparedness_campaign_desc:0 "With tensions rising between Germany and us, we must be ready for a possible conflict with them. While we cannot offer the war preparedness campaign Wilsons open endorsement, we can make some positive off the hand remarks about them."
 USA_the_root_cause_desc:0 "The second Klan is undoubtedly founded on anti American institutions, and their recent rise has been because they have prayed on good men who are simply uneducated or lack living proper opprotunity. By targeting the moral conscience of Americans, and investing in the south, we can stop the Klan from expanding to every day Americans."
 trustbust.tt:0 "These decisions allow for the reduction of the §YCompany Monopolies§! national spirit"
 stoproosevelt.tt:0 "Spending the 25 political power will stop the debuffs, but immediately restart the mission,"
