--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8173,7 +8173,7 @@ woap.tt:0 "While the base modifier of the idea '§YWorkers Compensation Law§!' 
 
 fyousussy.tt:0 "While the base modifier of this focus to §YWilsonomics§! is, (Max Factories in a State: §G+6.00%§!)\nFor every level of §SProgressivism§!, stacking up to §C3§! times, this focus will give an additional:\nMax Factories in a State: §G+2.00%§!\neach."
 
-imgooningrn.tt:0 "For every level of §SProgressivism§!, stacking up to 3 times, we will be able to take this decision again.\nRight now, your level of §SProgressivism§! is: §Y[?USA_progressive_strength]§!"
+imgooningrn.tt:0 "For every level of §SProgressivism§!, stacking up to §C3§! times, we will be able to take this decision again.\nRight now, your level of §SProgressivism§! is: §Y[?USA_progressive_strength]§!"
 
 new_agri.tt:0 "While the base modifier of this focus to §YWilsonomics§! is, (Consumer Goods Factories factor: §Y-6.0%§!)\nFor every level of §SProgressivism§!, stacking up to §C3§! times, this focus will give an additional:\nConsumer Goods Factories factor: §Y-2.0%§!\neach."
 
